addition of gitignore.

--- a/app/views/layouts/application_layout.jade
+++ b/app/views/layouts/application_layout.jade
@@ -15,6 +15,7 @@ html
 				div#logo
 					div.title MobileHN
 					div.pagetitle #{title}
-			!= body
+			div#contentContainer
+				!= body
 		div#footer
 			p Created by @iamjpg simply to play with NodeJS
