Accounting for service failure.  Added animations.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,8 +10,7 @@ html
 	script(type="text/javascript", src='http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js')
 	script(type="text/javascript", src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js')
 	script(type="text/javascript", src="/javascripts/application.js")
-	script(type="text/javascript", src="/javascripts/jquery.cors.js")
-	script(type="text/javascript", src="/javascripts/jquery.jsonp.js")
+	script(type="text/javascript", src="/javascripts/jquery.location.listener.js")
 	body
 		div#content
 			div#header
@@ -22,3 +21,4 @@ html
 				!= body
 		div#footer
 			p Created by @iamjpg simply to play with NodeJS
+		div#loader
