--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -88,3 +88,13 @@ body {
 	font-size: 10px !important;
 	margin-left: 20px;
 }
+
+#loader {
+	background: url('../images/loading.gif') no-repeat center center;
+	width: 0px;
+	height: 0px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
+}
