--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,5 +20,8 @@ html
 			div#contentContainer
 				!= body
 		div#footer
-			p Created by @iamjpg simply to play with NodeJS
+			p Created by 
+				a(href="http://twitter.com/iamjpg")@iamjpg
+				\ simply to play with NodeJS | 
+				a(href="/about") About
 		div#loader
