--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,9 @@ html
 		div#footer
 			p Created by 
 				a(href="http://twitter.com/iamjpg")@iamjpg
-				\ simply to play with NodeJS | 
-				a(href="/about") About
+				\ simply to play with NodeJS
+				br
+				\ More info 
+				a(href="/about") here
+				\.
 		div#loader
