--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 !!! 5
 html
 	head
-	title= title
+	title Unofficial MobileHN
 	meta(name="HandheldFriendly", content="True")
 	meta(name="MobileOptimized", content="320")
 	meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -22,7 +22,7 @@ html
 		div#footer
 			p Created by 
 				a(href="http://twitter.com/iamjpg")@iamjpg
-				\ simply to play with NodeJS
+				\ simply to play with NodeJS.
 				br
 				\ More info 
 				a(href="/about") here
