More thanks given.

--- a/views/about.jade
+++ b/views/about.jade
@@ -13,6 +13,10 @@ div#credit
 	p Special thanks to 
 		a(href="ihackernews.com") iHackerNews
 		\ for the awesome API. Without it this wouldn't have been nearly as simple.
+	p
+		\ Also a huge thanks to
+		a(href="http://viewtext.org") viewtext.org
+		\ for the beautiful text preview of articles.
 
 	h3 Fun Facts
 	ul
