Small word change

--- a/views/about.jade
+++ b/views/about.jade
@@ -16,7 +16,7 @@ div#credit
 	p
 		\ Also a huge thanks to
 		a(href="http://viewtext.org") viewtext.org
-		\ for the beautiful text preview of articles.
+		\ for the super nice plain text article representations.
 
 	h3 Fun Facts
 	ul
