--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -121,29 +121,36 @@ li {
 }
 
 #commentContainer {
+	font-size: 12px;
 	padding: 10px;
 	background: #f5f5f5;
 	border-top: 3px solid #dcdcdc;
 }
 
+#commentContainer ul {
+	margin: 0;
+	padding: 0;
+}
+
 .comment {
 	margin: 10px 10px 0 10px;
+	padding: 10px;
+	border-left: 3px solid #dcdcdc;
+	border-bottom: 1px dotted #dcdcdc;
 }
 
 .commentChild {
-	font-size: 12px;
 	margin: 10px;
 	margin-left: 40px;
 	border-left: 3px solid #dcdcdc;
 	border-bottom: 1px dotted #dcdcdc;
-	padding: 0 0 10px 10px;
+	padding: 10px;
 }
 
 .commentSecondChild {
-	font-size: 12px;
 	margin: 10px;
 	margin-left: 80px;
 	border-left: 3px solid #dcdcdc;
 	border-bottom: 1px dotted #dcdcdc;
-	padding: 0 0 10px 10px;
+	padding: 10px;
 }
