--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -132,6 +132,10 @@ li {
 	padding: 0;
 }
 
+#commentContainer ol {
+	padding: 0 0 0 10px;
+}
+
 .comment {
 	margin: 10px 10px 0 10px;
 	padding: 10px;
