New articles added.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,13 @@ html
 				div#logo
 					div.title MobileHN
 					div.pagetitle #{title}
+			div#nav
+				ul
+					li
+						button.minimal#btnFrontPage Front Page
+					li
+						button.minimal#btnNewStories New Stories
+				div.clear
 			div#contentContainer
 				!= body
 		div#footer
