--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -15,8 +15,9 @@ a {
 }
 
 #header {
-	background: url('/images/bg_header.png') repeat-x left bottom;
-	height: 61px;
+	/* background: url('/images/bg_header.png') repeat-x left bottom; */
+	border-bottom: 1px dotted #CCC;
+	height: 50px;
 }
 
 #logo {
@@ -158,3 +159,62 @@ li {
 	border-bottom: 1px dotted #dcdcdc;
 	padding: 10px;
 }
+
+#nav {
+	padding: 10px 0;
+	border-bottom: 1px dotted #CCC;
+}
+
+#nav ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+#nav li {
+	font-size: 12px;
+	margin: 0 0 0 15px;
+	float: left;
+}
+
+.clear {
+	clear: both;
+}
+
+button.minimal {
+  background: #e3e3e3;
+  border: 1px solid #bbb;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  -moz-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  -ms-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  -o-box-shadow: inset 0 0 1px 1px #f6f6f6;
+  box-shadow: inset 0 0 1px 1px #f6f6f6;
+  color: #333;
+  font: bold 12px "helvetica neue", helvetica, arial, sans-serif;
+  line-height: 1;
+  padding: 6px 9px;
+  text-align: center;
+  text-shadow: 0 1px 0 #fff;
+  width: 100px; }
+  button.minimal:hover {
+    background: #d9d9d9;
+    -webkit-box-shadow: inset 0 0 1px 1px #eaeaea;
+    -moz-box-shadow: inset 0 0 1px 1px #eaeaea;
+    -ms-box-shadow: inset 0 0 1px 1px #eaeaea;
+    -o-box-shadow: inset 0 0 1px 1px #eaeaea;
+    box-shadow: inset 0 0 1px 1px #eaeaea;
+    color: #222;
+    cursor: pointer; }
+  button.minimal:active {
+    background: #d0d0d0;
+    -webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    -moz-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    -ms-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    -o-box-shadow: inset 0 0 1px 1px #e3e3e3;
+    box-shadow: inset 0 0 1px 1px #e3e3e3;
+    color: #000; }
