--- a/views/about.jade
+++ b/views/about.jade
@@ -4,13 +4,14 @@ div#credit
 		\ Hello, my name is JP and this is my first deployed NodeJS application.
 	p
 		\ Why would I recreate the wheel? Well, I wanted to mess around with a little NodeJS,
-		\ use the ExpressJS framework, and more than anything, deploy my tiny little app on my Dreamhost VPS.
+		\ use the 
+		a(href="http://expressjs.com") ExpressJS framework
+		\, and more than anything, deploy my tiny little app on my Dreamhost VPS.
 	p
-		\ This was nothing more than a fun little programming exercise/learning experience. See, I love programming, and to learn things
-		\ you have to create little projects :)
+		\ This is nothing more than a fun little programming exercise/learning experience. I love programming, and the easiest way for me to learn is to play.
 
 	h3 Thanks
-	p Special thanks to 
+	p I have to thank 
 		a(href="ihackernews.com") iHackerNews
 		\ for the awesome API. Without it this wouldn't have been nearly as simple.
 	p
@@ -18,12 +19,14 @@ div#credit
 		a(href="http://viewtext.org") viewtext.org
 		\ for the super nice plain text article representations.
 
-	h3 Fun Facts
+	h3 Some Facts You May or May Not Care About
 	ul
-		li I didnt' use a mobile framework for this app. Just some simple jQuery animations and good old fashioned ajax.
-		li Because of this project Jade is now my most favorite templating language ever. Seriously. It rocks.
-		li I considered and actually began using RailwayJS for this project. I like the RailwayJS framework more than Express,
-			\ but figure for something so simple, using Express was a fine way to go.
+		li I didn't use a mobile framework for this app. Just some simple jQuery animations and good old fashioned ajax. I'd like to change those to CSS keyframe animations eventually.
+		li Can I just take a second to tell you how much I love 
+			a(href="http://jade-lang.com/") Jade 
+			\ as a templating language?
+		li I started this project using the RailwayJS framework,
+			\ but figured for something so simple, using ExpressJS was a fine way to go. For a more complicated application I love the logical project set up of Railway. So Rails like.
 		li
 			\ I doubt anyone will care, but the source for this project is completely open over at
 			a(href="https://github.com/iamjpg/HN-Mobile") Github.
