--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,9 +20,11 @@ html
 			div#nav
 				ul
 					li
-						button.minimal#btnFrontPage Front Page
+						button.minimal#btnFrontPage Front
 					li
-						button.minimal#btnNewStories New Stories
+						button.minimal#btnNewStories New
+					li
+						button.minimal#btnAbout About
 				div.clear
 			div#contentContainer
 				!= body
