--- a/views/about.jade
+++ b/views/about.jade
@@ -3,30 +3,31 @@ div#credit
 	p 
 		\ Hello, my name is JP and this is my first deployed NodeJS application.
 	p
-		\ Why would I recreate the wheel? Well, I wanted to mess around with a little NodeJS,
+		\ Why build this? I simple wanted to mess around with a little NodeJS,
 		\ use the 
 		a(href="http://expressjs.com") ExpressJS framework
 		\, and more than anything, deploy my tiny little app on my Dreamhost VPS.
 	p
-		\ This is nothing more than a fun little programming exercise/learning experience. I love programming, and the easiest way for me to learn is to play.
+		\ This project seemed like an easy introduction.
 
-	h3 Thanks
+	h3 Credit
 	p I have to thank 
 		a(href="ihackernews.com") iHackerNews
 		\ for the awesome API. Without it this wouldn't have been nearly as simple.
 	p
-		\ Also a huge thanks to
+		\ Also thanks to
 		a(href="http://viewtext.org") viewtext.org
 		\ for the super nice plain text article representations.
 
-	h3 Some Facts You May or May Not Care About
+	h3 Random Things To Mention
 	ul
-		li I didn't use a mobile framework for this app. Just some simple jQuery animations and good old fashioned ajax. I'd like to change those to CSS keyframe animations eventually.
+		li I didn't use a mobile framework for this app. Just some simple jQuery animations and good old fashioned ajax.
+			\ I'd like to change those to CSS keyframe animations if I can get around to it :)
+		li Eventually I would like to move away from the window.location jQuery plugin I'm using to track hash changes and use
+			\ PushState. Some day, some day.
 		li Can I just take a second to tell you how much I love 
-			a(href="http://jade-lang.com/") Jade 
-			\ as a templating language?
-		li I started this project using the RailwayJS framework,
-			\ but figured for something so simple, using ExpressJS was a fine way to go. For a more complicated application I love the logical project set up of Railway. So Rails like.
+			a(href="http://jade-lang.com/") Jade
+			\ as a templating language? Love.
 		li
 			\ I doubt anyone will care, but the source for this project is completely open over at
 			a(href="https://github.com/iamjpg/HN-Mobile") Github.
