--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -165,13 +165,19 @@ li {
 	border-bottom: 1px dotted #CCC;
 }
 
-#nav ul {
+#navContainer {
+	margin: auto;
+	text-align: center;
+}
+
+#navContainer ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
+	display: inline-block;
 }
 
-#nav li {
+#navContainer li {
 	font-size: 12px;
 	margin: 0 0 0 10px;
 	float: left;
