--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 div#frontPage
 	- if (data != "error")
 		- data.forEach(function (i,o) {
-			div#frontPage.newsItem(onclick="MHN.getStory('#{i.url}'); MHN.currentArticleId=#{i.id}; _gaq.push(['_trackEvent', 'Stories', 'Read', '#{i.title}']);")
+			div#frontPage.newsItem(onclick="MHN.getStory('#{i.url}',\"#{i.title}\"); MHN.currentArticleId=#{i.id};")
 				div.postTitle
 					strong #{i.title}
 				div.meta
