--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,8 +22,10 @@ html
 					ul
 						li
 							button.minimal#btnFrontPage Front
+						li.spacer &nbsp;
 						li
 							button.minimal#btnNewStories New
+						li.spacer &nbsp;
 						li
 							button.minimal#btnAbout About
 					div.clear
