Text and layout changes

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,14 +1,14 @@
 div#credit
 	h3 About
 	p 
-		\ Hello, my name is JP and this is my first deployed NodeJS application.
+		\ Hello, my name is 
+		a(href="http://johnpatrickgiven.com") JP
+		\ and this is my first NodeJS application.
 	p
-		\ Why build this? I simple wanted to mess around with a little NodeJS,
+		\ Why build a mobile HN when there already is one? Well, I simply wanted to mess around with Node, 
 		\ use the 
 		a(href="http://expressjs.com") ExpressJS framework
-		\, and more than anything, deploy my tiny little app on my Dreamhost VPS.
-	p
-		\ This project seemed like an easy introduction.
+		\, and deploy my tiny little app to my Dreamhost VPS.
 
 	h3 Credit
 	p I have to thank 
@@ -22,12 +22,12 @@ div#credit
 	h3 Random Things To Mention
 	ul
 		li I didn't use a mobile framework for this app. Just some simple jQuery animations and good old fashioned ajax.
-			\ I'd like to change those to CSS keyframe animations if I can get around to it :)
+			\ I'd like to change those to CSS keyframe animations at some point :)
 		li Eventually I would like to move away from the window.location jQuery plugin I'm using to track hash changes and use
-			\ PushState. Some day, some day.
-		li Can I just take a second to tell you how much I love 
+			\ PushState instead.
+		li I'd like to take a second to tell you how much I love 
 			a(href="http://jade-lang.com/") Jade
-			\ as a templating language? Love.
+			\ as a templating language. Love might not eve describe it.
 		li
 			\ I doubt anyone will care, but the source for this project is completely open over at
 			a(href="https://github.com/iamjpg/HN-Mobile") Github.
