--- a/views/about.jade
+++ b/views/about.jade
@@ -5,14 +5,14 @@ div#credit
 		a(href="http://johnpatrickgiven.com") JP
 		\ and this is my first NodeJS application.
 	p
-		\ Why build a mobile HN when there already is one? Well, I simply wanted to mess around with Node, 
+		\ Why build a mobile HN when there already is one (or two, or three)? Well, I simply wanted to mess around with Node, 
 		\ use the 
 		a(href="http://expressjs.com") ExpressJS framework
 		\, and deploy my tiny little app to my Dreamhost VPS.
 
 	h3 Credit
 	p I have to thank 
-		a(href="ihackernews.com") iHackerNews
+		a(href="http://hndroidapi.appspot.com/") hndroidapi
 		\ for the awesome API. Without it this wouldn't have been nearly as simple.
 	p
 		\ Also thanks to
