Using spin.js opposed to animated gifs for loaders for better display on retina displays.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
 	link(rel='stylesheet', href='/stylesheets/normalize.css')
 	link(rel='stylesheet', href='/stylesheets/lib.css')
 	script(type="text/javascript", src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
+	script(type="text/javascript", src="/javascripts/spin.min.js")
 	script(type="text/javascript", src="/javascripts/application.js")
 	script(type="text/javascript", src="/javascripts/jquery.location.listener.js")
 	body
