--- a/public/stylesheets/lib.css
+++ b/public/stylesheets/lib.css
@@ -106,7 +106,7 @@ a {
 }
 
 #loader {
-	background: url('../images/loading.gif') no-repeat center center;
+	/* background: url('../images/loading.gif') no-repeat center center; */
 	width: 0px;
 	height: 0px;
 	position: absolute;
