Not printing the nextID node to the browser

--- a/views/about.jade
+++ b/views/about.jade
@@ -19,15 +19,15 @@ div#credit
 		a(href="http://viewtext.org") viewtext.org
 		\ for the super nice plain text article representations.
 
-	h3 Random Things To Mention
+	h3 To Do (Not Exhaustive)
 	ul
 		li I didn't use a mobile framework for this app. Just some simple jQuery animations and good old fashioned ajax.
-			\ I'd like to change those to CSS keyframe animations at some point :)
+			\ I'd like to change the transitions to CSS keyframe animations at some point.
 		li Eventually I would like to move away from the window.location jQuery plugin I'm using to track hash changes and use
 			\ PushState instead.
-		li I'd like to take a second to tell you how much I love 
-			a(href="http://jade-lang.com/") Jade
-			\ as a templating language. Love might not eve describe it.
-		li
-			\ I doubt anyone will care, but the source for this project is completely open over at
+		li Add Pagination from the front page.
+
+	h3 Fork This Project
+	ul
+		li I doubt anyone will care, but the source for this project is completely open over at 
 			a(href="https://github.com/iamjpg/HN-Mobile") Github.
