Fixing layout to accuont for orientation changes.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,9 @@
 html
 	head
 	title Unofficial MobileHN
-	meta(name="HandheldFriendly", content="True")
-	meta(name="MobileOptimized", content="320")
-	meta(name="viewport", content="width=device-width, initial-scale=1.0")
+	meta(name="apple-mobile-web-app-capable", content="yes")
+	meta(name="apple-mobile-web-app-status-bar-style", content="black-translucent")
+	meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
 	link(rel='stylesheet', href='/stylesheets/normalize.css')
 	link(rel='stylesheet', href='/stylesheets/lib.css')
 	script(type="text/javascript", src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js')
